--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/core": "^6.2.1",
-    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.1.1",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
@@ -21,7 +21,8 @@
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-native-screens": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
